@@ -893,15 +893,18 @@ g_mime_utils_8bit_header_encode
 g_mime_utils_8bit_header_encode_phrase
 g_mime_utils_structured_header_fold
 g_mime_utils_unstructured_header_fold
+GMIME_BASE64_ENCODE_LEN
 g_mime_utils_base64_decode_step
 g_mime_utils_base64_encode_step
 g_mime_utils_base64_encode_close
 GMIME_UUDECODE_STATE_INIT
 GMIME_UUDECODE_STATE_BEGIN
 GMIME_UUDECODE_STATE_END
+GMIME_UUENCODE_LEN
 g_mime_utils_uudecode_step
 g_mime_utils_uuencode_step
 g_mime_utils_uuencode_close
+GMIME_QP_ENCODE_LEN
 g_mime_utils_quoted_decode_step
 g_mime_utils_quoted_encode_step
 g_mime_utils_quoted_encode_close
